<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/hotel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Welcome_to_Hotel"
                android:textColor="@color/colorPrimary"
                android:textSize="29sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/please_sign_in_to_continue"
                android:textColor="@color/colorTextSecondary"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                >

                <LinearLayout
                    android:id="@+id/username_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/background_page"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_of_account_"
                        app:tint="@color/colorAccent" />

                    <EditText
                        android:id="@+id/usernameId"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@null"
                        android:hint="johndoe"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@color/colorWhite"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/username"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"
                    app:layout_constraintBottom_toTopOf="@id/username_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/username_text"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <LinearLayout
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/background_page"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_of_lock_"
                        app:tint="@color/colorAccent" />

                    <EditText
                        android:id="@+id/passwordId"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@null"
                        android:hint="@string/password_hint"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@color/colorWhite"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"
                    app:layout_constraintBottom_toTopOf="@id/password_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/password_text"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="30dp"
                android:text="@string/forgot_password"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:layout_width="match_parent"
                android:id="@+id/btn_signin"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="Sign in"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:onClick="signin_btn"
                android:background="@drawable/background_btn"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorTextSecondary" />

                <TextView
                    android:id="@+id/text_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/create_new_account"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_guest"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorTextSecondary" />

                <Button
                    android:id="@+id/btn_home"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="8dp"
                    android:onClick="go"
                    android:text="go"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/background_btn"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>